tests/fixtures/negative/libraries/LibraryEntitiesShouldNotBePublic.kt
package test

internal class InternalHelper {
    fun doWork() {
        println("correctly internal")
    }
}
